--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -1,10 +1,11 @@
 name: Makefile CI
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ $default-branch ]
+    branches: 
+      - main
   pull_request:
-    branches: [ $default-branch ]
 
 jobs:
   build:
