--- a/.github/workflows/github-actions.yaml
+++ b/.github/workflows/github-actions.yaml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: configure
-        run: ./configure
+      - name: Where Are We
+        run: ls -l
 
       - name: Install dependencies
         run: make resolve
