--- a/.github/workflows/registry.yaml
+++ b/.github/workflows/registry.yaml
@@ -14,6 +14,11 @@ jobs:
       - name: 'Checkout GitHub Action'
         uses: actions/checkout@main
 
+      - name: 'Setup Go'
+        uses: actions/setup-go@v4
+        with:
+          go-version: '^1.21.5'
+
       - name: 'Build Binary'
         run: make build
 
