--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
@@ -102,6 +102,7 @@ atlassian-ide-plugin.xml
 .idea/sonarlint/
 
 .idea/
+data/
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
