--- a/config/config.yml
+++ b/config/config.yml
@@ -2,8 +2,8 @@ port: 8080
 health_check_path: /healthz
 
 postgres:
-  host: localhost
+  host: "postgres-broker"
   port: 5432
-  user: user
-  password: password
-  dbname: dbname
+  user: "postgres"
+  password: "postgres"
+  dbname: "postgres"
