--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,31 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:13.3
-    container_name: postgres-broker
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+  broker:
+    image: broker:latest
+    container_name: broker
     ports:
-      - "5433:5432"
+      - "8080:8080"
+    healthcheck:
+      test: curl --fail http://localhost:8080/healthz || exit 1
+      interval: 1m
+      timeout: 30s
+      retries: 3
+    depends_on:
+      postgres-broker:
+        condition: service_healthy
+
+  postgres-broker:
+    image: postgres:13
+    container_name: "postgres-broker"
+    environment:
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_DB: "postgres"
     volumes:
-        - ./data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
